maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:10: error: ';' expected but '=' found.
                {(a,b)=(i,j);setIndication(i,j,0)}}}
                      ^